--- a/style.css
+++ b/style.css
@@ -45,3 +45,66 @@ nav ul li{
 nav ul li a:hover{
     color:black;
 }
+
+#heroSection{
+    font-size: 100px;
+    line-height:1.2;
+    font-weight:600;
+}
+
+hr{
+    width:33.3%;
+    height: 1px;
+    background-color: black;
+    margin: 70px 0;
+}
+
+.lineText{
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.text{
+    margin:30px;
+    font-size: 20px;
+    font-weight: 350;
+}
+
+.connect{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.talk{
+    border-radius: 90px;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    border:none;
+    padding: 10px 19px; /* Padding */
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.links{
+    background-color: white;
+    color:#9CA3AF;
+    border-color: #9CA3AF;
+    padding: 10px 19px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    margin: 4px 15px; 
+    border-radius: 12px;
+    box-shadow: 2px 2px 5px gray;
+}
+
+.links:hover {
+    background-color: black; 
+    color: white;
+    box-shadow:none;
+}
+/* <a href="/#contact" class="cursor-pointer border-2 rounded-3xl px-4 py-2 hover:border-black text-white bg-black hover:bg-transparent hover:text-black flex gap-2">Let's Talk<span class="my-auto"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M869 487.8L491.2 159.9c-2.9-2.5-6.6-3.9-10.5-3.9h-88.5c-7.4 0-10.8 9.2-5.2 14l350.2 304H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h585.1L386.9 854c-5.6 4.9-2.2 14 5.2 14h91.5c1.9 0 3.8-.7 5.2-2L869 536.2a32.07 32.07 0 0 0 0-48.4z"></path></svg></span></a> */
