--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ nav ul li a:hover{
 #heroSection{
     font-size: 100px;
     line-height:1.2;
-    font-weight:600;
+    font-weight:500;
 }
 
 hr{
@@ -67,8 +67,8 @@ hr{
 
 .text{
     margin:30px;
-    font-size: 20px;
-    font-weight: 350;
+    font-size: 25px;
+    font-weight: 0;
 }
 
 .connect{
@@ -107,4 +107,33 @@ hr{
     color: white;
     box-shadow:none;
 }
-/* <a href="/#contact" class="cursor-pointer border-2 rounded-3xl px-4 py-2 hover:border-black text-white bg-black hover:bg-transparent hover:text-black flex gap-2">Let's Talk<span class="my-auto"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M869 487.8L491.2 159.9c-2.9-2.5-6.6-3.9-10.5-3.9h-88.5c-7.4 0-10.8 9.2-5.2 14l350.2 304H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h585.1L386.9 854c-5.6 4.9-2.2 14 5.2 14h91.5c1.9 0 3.8-.7 5.2-2L869 536.2a32.07 32.07 0 0 0 0-48.4z"></path></svg></span></a> */
+
+
+/* -----------------about-------------------- */
+#about{
+    padding: 80px 0;
+}
+
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.about-col-1{
+    flex-basis: 30%;
+}
+.about-col-1 img{
+    width:100%;
+    height: 70%;
+    border-radius:15px ;
+}
+
+.about-col-2{
+    flex-basis: 65%;
+}
+
+.aboutMe{
+    font-size: 25px;
+    font-weight: 400;
+}
